<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/userinfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:textColor="@color/gray"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
 
          <RelativeLayout
            android:id="@+id/setting_updata"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_button_top"
            android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_update"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold" />
        </RelativeLayout>
 

        <RelativeLayout
            android:id="@+id/setting_feedback"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_button_mid"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/title_fadeback"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>
        
 

        <RelativeLayout
            android:id="@+id/setting_about"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_button_bottom"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/about_tips"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_wechat"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_button_bottom"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/wechat_request"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>
        

    </LinearLayout>

</LinearLayout>