<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg" >

     <include android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:id="@+id/HEADER"
         layout="@layout/global_top_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/HEADER"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/version_msg"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/bg_setting"
                android:orientation="vertical"
                android:padding="5.0dip"
                 >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_logo" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/app_name_version"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

               
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="10.0dip"
                android:text="@string/about_wpd"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/bg_setting"
                android:orientation="vertical"
                android:padding="10.0dip"
                  >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_app_explain"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

          
        </LinearLayout>
    </ScrollView>

</RelativeLayout>