<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <include android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:id="@+id/HEADER"
         layout="@layout/global_top_header" />

    
      <RelativeLayout 
            android:layout_width="280dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_below="@id/HEADER"
		    android:id="@+id/new_version_layout" 
		    android:background="@drawable/bg_setting"
		     android:layout_centerHorizontal="true"
		     android:layout_centerVertical="true"
            >
            
            <TextView
			  android:layout_width="wrap_content"
			  android:layout_height="40dp"
			  android:textColor="@color/black"
			  android:text="@string/at_version"
			  android:layout_marginLeft="20dp"
			  android:gravity="center"
		   />
           <TextView
			  android:layout_width="wrap_content"
			  android:layout_height="40dp"
			  android:id="@+id/at_version_textview" 
			  android:textColor="@color/black"
			  android:layout_centerHorizontal="true"
			  android:gravity="center"
		    />
           <View 
               android:layout_width="fill_parent"
			   android:layout_height="0.6dp"
			   android:background="@color/gray"
			   android:layout_below="@id/at_version_textview"
            />
            <TextView
			  android:layout_width="wrap_content"
			  android:layout_height="40dp"
			  android:textColor="@color/green"
			  android:text="@string/new_version"
			  android:layout_below="@id/at_version_textview"
			  android:layout_marginTop="5dp"
			  android:layout_marginLeft="20dp"
			  android:gravity="center"
		   />
	        <TextView
			  android:layout_width="wrap_content"
			  android:textColor="@color/green"
			  android:layout_height="40dp"
			  android:id="@+id/new_version_textview" 
			  android:layout_below="@id/at_version_textview"
			  android:layout_marginTop="5dp"
			  android:layout_centerHorizontal="true"
			  android:gravity="center"	
		/>
           
            
            
        </RelativeLayout>
        
           <TextView
			  android:layout_width="wrap_content"
			  android:textColor="@color/gray"
			  android:layout_height="40dp"
			  android:layout_marginTop="10dp"
			  android:layout_centerHorizontal="true"
			  android:layout_below="@id/new_version_layout"
			  android:text="@string/update_msg"
		 />
          <RelativeLayout 
            android:layout_width="280dp"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="40dp"
		    android:id="@+id/update_msg_layout" 
		    android:layout_below="@id/new_version_layout"
		    android:background="@drawable/bg_setting"
		    android:layout_centerHorizontal="true"
		    android:padding="5dp"
            >
       
	        <TextView
			  android:layout_width="wrap_content"
			  android:textColor="@color/gray"
			  android:layout_height="wrap_content"
			  android:id="@+id/update_msg_textview" 
			  android:layout_below="@id/at_version_textview"
			  android:layout_marginTop="5dp"
			  android:gravity="left"
			  android:layout_centerVertical="true"
			  android:minHeight="40dp"
			  android:textSize="14sp"
		/>
           
            
            
        </RelativeLayout>
    <Button
        android:id="@+id/downLoadButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/update_msg_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/now_download"
        style="@style/button_yellow"
         />

</RelativeLayout>